<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RSPRrec</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_recording_button_string">New Recording</string>
    <string name="previous_recording_button_string">Previous Recordings</string>
    <string name="new_species_button_string">New Species</string>
    <string name="data_management_button_string">Data Management</string>
    <string name="manage_data_button_string">Manage Data</string>
	<string name="settings">Settings</string>
	<string name="gps">GPS</string> 
	<string name="send_prompt">Send Prompt</string> 
	<string name="save_photo_to_device">Save photo to device</string> 
	<string name="apply">Apply</string> 
	<string name="back">Back</string> 
	<string name="only_upload_with_wifi">Only upload with WiFi</string>
	<string name="login_out_button_string">Log in</string>
	<string name="settings_button_string">Settings</string>
	<string name="recordings_name">Name</string>
	<string name="recordings_reserves">Reserves</string>
	<string name="recordings_plants">Plants</string>
	<string name="recording_latitude">Latitude</string>
	<string name="recordings_longitude">Longitude</string>
	<string name="recordings_notes">Notes</string>
	<string name="recordings_submit">Submit</string>
	<string name="recordings_reset">Reset</string>
	<string name="recordings_namesearch">Name</string>
	<string name="recordings_delete">Delete</string>
	<string name="recordings_edit">Edit</string>
	<string name="mainMenu">Main Menu</string>
	<string name="register">Register</string>
	<string name="editPlantRecording">Edit Plant Recording</string>
	<string name="addRecording">Add Recording</string>
	
	<color  name="settings_background">#545454</color>
    <color  name="settings_button">#669900</color>
	<color 	name="settings_highlight">#7FC123</color> 
	<color  name="settings_container">#272727</color>
	<color name="recordings_text_backbround">#E5E5E5</color>
	<color  name="main_menu_background">#545454</color>
    <color  name="main_menu_button">#669900</color>
	<color 	name="main_menu_highlight">#7FC123</color> 
	<color  name="main_menu_button_container_background">#272727</color> 
	<string name="login_title_string">Log In</string> 
	<string name="username_string">Username</string> 
	<string name="password_string">Password</string> 
	<string name="login_button_string">Log in</string> 
	<string name="register_button_string">Register</string> 
	<string name="work_offline_button_string">Work Offline</string> 
	<string name="register_title_string">Register</string> 
	<string name="email_textview_string">email address</string> 
	<string name="back_button_string">Back</string> 
</resources>
