<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_menu_background"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tblCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/settings_container"
        android:padding="10dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/settings_button"
            android:padding="10dp" >

            <RadioButton
                android:id="@+id/radioGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/settings_button"
            android:padding="10dp" >

            <RadioButton
                android:id="@+id/radioSendPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_prompt" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/settings_button"
            android:padding="10dp" >

            <RadioButton
                android:id="@+id/radioPhotoToDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_photo_to_device" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/settings_button"
            android:padding="10dp" >

            <RadioButton
                android:id="@+id/radioWiFi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/only_upload_with_wifi" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:background="@color/settings_container" >

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@color/settings_button"
            android:text="@string/back"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btnApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/settings_button"
            android:text="@string/apply" />
    </LinearLayout>

</RelativeLayout>