<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/swatch3_0"
    android:orientation="vertical"
    tools:context="activities.ActivityEditRecordings"
    tools:ignore="PxUsage" >

    <ImageView
        android:id="@+id/img_addRecording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8.83"
        android:background="@color/swatch5_0"
        android:maxHeight="150dp"
        android:minHeight="200px"
        android:src="@android:drawable/divider_horizontal_dim_dark" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.38" >

        <TableRow
            android:id="@+id/Layout_Row1_addRecording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" >

            <SearchView
                android:id="@+id/srh_recordings_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/swatch4_2"
                android:queryHint="@string/recordings_namesearch" >
            </SearchView>

        </TableRow>

        <TableRow
            android:id="@+id/Layout_Row2_addRecording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" >

            <SearchView
                android:id="@+id/srh_recordings_reserves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/swatch4_2"
                android:queryHint="@string/recordings_reserves" >
            </SearchView>
        </TableRow>

        <TableRow
            android:id="@+id/Layout_Row3_addRecording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" >

            <SearchView
                android:id="@+id/srh_recordings_plants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/swatch4_2"
                android:queryHint="@string/recordings_plants" >
            </SearchView>
        </TableRow>

        <TableRow
            android:id="@+id/Layout_Row4_addRecordings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/txt_recordings_latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@color/swatch4_2"
                    android:ems="10"
                    android:height="40dp"
                    android:inputType="numberDecimal"
                    android:minHeight="40dp"
                    android:text="@string/recording_latitude" />

                <EditText
                    android:id="@+id/txt_recordings_longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@color/swatch4_2"
                    android:ems="10"
                    android:height="40dp"
                    android:inputType="numberDecimal"
                    android:minHeight="40dp"
                    android:text="@string/recordings_longitude" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/Layout_Row5_addRecording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" >

            <EditText
                android:id="@+id/txt_recordings_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.54"
                android:background="@color/swatch4_2"
                android:ems="10"
                android:height="40dp"
                android:inputType="textMultiLine"
                android:minHeight="70dp"
                android:text="@string/recordings_notes" />
        </TableRow>

        <TableRow
            android:id="@+id/Layout_Row6_addRecording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn_recordings_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:background="@color/swatch4_0"
                    android:text="@string/recordings_delete" />

                <Button
                    android:id="@+id/btn_recordings_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:background="@color/swatch4_0"
                    android:text="@string/recordings_edit" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>