<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_menu_background_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_menu_background"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="${relativePackage}.${activityClass}" >

    <TableLayout
        android:id="@+id/large_button_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_menu_button_container_background"
        android:layout_marginBottom="20dp"
        android:padding="10dp" >

        <TableRow
            android:id="@+id/large_button_row_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/new_recording_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/main_menu_button"
                android:maxHeight="100dp"
                android:maxWidth="100dp"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:padding="15dp"
                android:text="@string/new_recording_button_string" />

            <Button
                android:id="@+id/previous_recording_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/main_menu_button"
                android:maxHeight="100dp"
                android:maxWidth="100dp"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:padding="10dp"
                android:text="@string/previous_recording_button_string" />

        </TableRow>

        <TableRow
            android:id="@+id/large_button_row_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/new_species_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/main_menu_button"
                android:maxHeight="100dp"
                android:maxWidth="100dp"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:padding="10dp"
                android:text="@string/new_species_button_string" />

            <Button
                android:id="@+id/manage_data_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/main_menu_button"
                android:maxHeight="100dp"
                android:maxWidth="100dp"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:padding="10dp"
                android:text="@string/manage_data_button_string" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/small_button_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_menu_button_container_background"
        android:padding="12dp"
        android:layout_marginBottom="40dp" >

        <TableRow
            android:id="@+id/small_button_row_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/Button05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/main_menu_button"
                android:maxHeight="45dp"
                android:maxWidth="45dp"
                android:minHeight="45dp"
                android:minWidth="45dp" />

            <Button
                android:id="@+id/Button04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/main_menu_button"
                android:maxHeight="45dp"
                android:maxWidth="45dp"
                android:minHeight="45dp"
                android:minWidth="45dp"  />

            <Button
                android:id="@+id/Button03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/main_menu_button"
                android:maxHeight="45dp"
                android:maxWidth="45dp"
                android:minHeight="45dp"
                android:minWidth="45dp"  />

            <Button
                android:id="@+id/Button02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/main_menu_button"
                android:maxHeight="45dp"
                android:maxWidth="45dp"
                android:minHeight="45dp"
                android:minWidth="45dp"  />

            <Button
                android:id="@+id/Button01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/main_menu_button"
                android:maxHeight="45dp"
                android:maxWidth="45dp"
                android:minHeight="45dp"
                android:minWidth="45dp"  />

        </TableRow>

        <TableRow
            android:id="@+id/small_button_row_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/Button09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/main_menu_button"
                android:maxHeight="45dp"
                android:maxWidth="45dp"
                android:minHeight="45dp"
                android:minWidth="45dp" />

            <Button
                android:id="@+id/Button08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/main_menu_button"
                android:maxHeight="45dp"
                android:maxWidth="45dp"
                android:minHeight="45dp"
                android:minWidth="45dp"  />

            <Button
                android:id="@+id/Button07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/main_menu_button"
                android:maxHeight="45dp"
                android:maxWidth="45dp"
                android:minHeight="45dp"
                android:minWidth="45dp"  />

            <Button
                android:id="@+id/Button06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/main_menu_button"
                android:maxHeight="45dp"
                android:maxWidth="45dp"
                android:minHeight="45dp"
                android:minWidth="45dp"  />

            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/main_menu_button"
                android:maxHeight="45dp"
                android:maxWidth="45dp"
                android:minHeight="45dp"
                android:minWidth="45dp"  />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/bottom_button_linear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/settings_container" >

        <Button
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@color/settings_button"
            android:onClick="toSettings"
            android:text="@string/settings_button_string"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/login_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/settings_button"
            android:onClick="toMainMenu"
            android:text="@string/login_out_button_string" />
    </LinearLayout>

</LinearLayout>
